add magic link login support
